[gd_scene load_steps=12 format=3 uid="uid://ck211joya21by"]

[ext_resource type="Texture2D" uid="uid://ptsm40w3k0hy" path="res://Assets/img/Space Background.png" id="1_344mu"]
[ext_resource type="Script" path="res://Scripts/i_menu.gd" id="1_x1yoh"]
[ext_resource type="Texture2D" uid="uid://cc0pgmyriwl5m" path="res://Assets/img/Logo.png" id="3_58na5"]
[ext_resource type="Texture2D" uid="uid://c65evofu7lvth" path="res://Assets/img/vigasMenu.png" id="4_i5o2u"]
[ext_resource type="Texture2D" uid="uid://cg7kduolb8nl8" path="res://Sprites/Tiles/image1.png" id="5_4s81o"]
[ext_resource type="FontFile" uid="uid://cu2k1pv7cfn4n" path="res://Assets/fonts/Jersey_15/Jersey15-Regular.ttf" id="6_d0e44"]
[ext_resource type="Texture2D" uid="uid://dsi8kw6awxe3q" path="res://Assets/img/Singleplayerbtn.png" id="7_vb5xd"]
[ext_resource type="Texture2D" uid="uid://brn5p42x0eean" path="res://Assets/img/Multiplayerbtn.png" id="8_gyn3w"]

[sub_resource type="Theme" id="Theme_u6bfd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f1u7e"]
texture = ExtResource("7_vb5xd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hhcyj"]
texture = ExtResource("8_gyn3w")

[node name="IMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x1yoh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0470588, 0.0431373, 0.117647, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_344mu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRectLogo" type="TextureRect" parent="CanvasLayer"]
physics_interpolation_mode = 1
custom_minimum_size = Vector2(923, 158)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -461.5
offset_right = 461.5
offset_bottom = 158.0
grow_horizontal = 2
texture = ExtResource("3_58na5")

[node name="TextureRectVigas" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -518.0
offset_right = 310.0
grow_vertical = 0
texture = ExtResource("4_i5o2u")

[node name="bullet_spawn" type="Node2D" parent="CanvasLayer"]
position = Vector2(262, 368)

[node name="cannon" type="TextureRect" parent="CanvasLayer"]
offset_left = 206.0
offset_top = 347.0
offset_right = 262.0
offset_bottom = 387.0
texture = ExtResource("5_4s81o")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.0
offset_top = 2.0
offset_right = 235.0
offset_bottom = 259.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35

[node name="SingleplayerButton" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(470, 90)
layout_mode = 2
theme = SubResource("Theme_u6bfd")
theme_override_fonts/font = ExtResource("6_d0e44")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxTexture_f1u7e")
text = "Singleplayer"

[node name="MultiplayerButton" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(470, 90)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_d0e44")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxTexture_hhcyj")
text = "Multiplayer"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/SingleplayerButton" to="." method="_on_singleplayer_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
